# DeepScan

./: .gitignore  CONTRIBUTING.md  DARPA_ANALYSIS.zh.md  README.md  README.zh.md  pyproject.toml
api/: README.md  __init__.py  config.xboundary.webhook.yaml  main.py  test_webhook_server.py  webhook.yaml
deepscan/: __init__.py  run.py
deepscan/config/: __init__.py
deepscan/datasets/: __init__.py  mi_peaks.py  spin.py  tellme.py  xboundary.py
deepscan/evaluators/: __init__.py  base.py  mi_peaks.py  registry.py  spin.py  spin_support.py  tellme.py  xboundary.py
deepscan/models/: __init__.py  base_runner.py  gemma.py  glm.py  internlm.py  internvl.py  llama.py  mistral.py  qwen.py
deepscan/registry/: __init__.py  dataset_registry.py  model_registry.py
deepscan/summarizers/: __init__.py  combined.py  mi_peaks.py  registry.py  spin.py  tellme.py  xboundary.py
deepscan/utils/: __init__.py
examples/: QUICK_START_QWEN3.md  config.default_all.yaml  config.example.yaml  config.mi_peaks.yaml  config.qwen3_mmlu.yaml  config.spin.tellme.xboundary.qwen2.5-7b-instruct.yaml  config.spin.yaml  config.tellme.yaml  config.x-boundary.tellme.spin.mi-peaks.qwen2.5-7b-instruct.yaml  config.xboundary-llama3.3-70b-instruct.yaml  config.xboundary-qwen2.5-7b-instruct.yaml  config.xboundary.tellme-qwen2.5-7b-instruct.yaml  config.xboundary.yaml  example_usage.py  gemma3_multimodal_demo.py  ministral3_multimodal_demo.py  qwen3_mmlu_evaluation.py  tellme_evaluation.py  xboundary_evaluation.py
llm_diagnose/: __init__.py  run.py
llm_diagnose/config/: __init__.py  loader.py
llm_diagnose/datasets/: __init__.py  mi_peaks.py  mmlu.py  spin.py  tellme.py  xboundary.py
llm_diagnose/evaluators/: __init__.py  base.py  mi_peaks.py  neuron_attribution.py  registry.py  representation_engineering.py  spin.py  tellme.py  xboundary.py
llm_diagnose/models/: __init__.py  gemma.py  glm.py  internlm.py  internvl.py  llama.py  mistral.py  qwen.py
llm_diagnose/registry/: __init__.py  base_registry.py  dataset_registry.py  model_registry.py
llm_diagnose/summarizers/: __init__.py  base.py  combined.py  mi_peaks.py  registry.py  spin.py  tellme.py  xboundary.py
llm_diagnose/utils/: __init__.py  model_introspection.py  progress.py  throughput.py
task_configs/: config.GLM-4.5-Air.yaml  config.InternVL3.5-14B.yaml  config.InternVL3.5-241B-A28B.yaml  config.Internlm3-8b-Instruct.yaml  config.Llama3.3-70B.yaml  config.Ministral-3-14B-Instruct-2512.yaml  config.Mistral-Small-24B-Instruct-2501.yaml  config.Qwen2.5-3models.yaml  config.Qwen2.5-72B.xboundary.yaml  config.gemma-3-27b-it.yaml
tests/: test_api_payload_mapping.py  test_base_runner.py  test_config_smoke.py  test_model_deployment.py  test_throughput_tracker.py  test_webhook_log_sink.py  test_webhook_result_payload.py
tools/: generate_dummy_chart_results.py  model_metadata.yaml  summarize_exp_to_csv.py
utils/: download_dataset.py  mock_progress_server.py  model_cache_converter.py  smoke_mipeaks_nsamples.py  stage_datasets.py
